newclay/test/Compiler/Propagation/Fail/BreakOutsideLoop/main.clay

define main;
overload main() {
    break;
}
